[gd_scene load_steps=14 format=3 uid="uid://bpax7tiyjugm5"]

[ext_resource type="FontFile" uid="uid://b4epnfmtr82tw" path="res://Misc/ocFont.otf" id="1_oldup"]
[ext_resource type="Script" uid="uid://0387nm6peicb" path="res://Scripts/MainMenu.gd" id="1_uu6fv"]
[ext_resource type="Texture2D" uid="uid://c7oao5oi1k4o5" path="res://Textures/Original_Campaign_Logo.png" id="3_ixqqn"]
[ext_resource type="PackedScene" uid="uid://b3j6gas5xlx1w" path="res://Prefabs/discord_menu_manager.tscn" id="4_aethh"]
[ext_resource type="Theme" uid="uid://1cxfhyrtntpc" path="res://Prefabs/Themes/OC_theme.tres" id="5_s5lhj"]

[sub_resource type="Animation" id="Animation_crfjn"]
resource_name = "Menu1Appear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Menu1/StartButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.7, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Menu1/OptionsButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Menu1/QuitButton:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.2, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Sprite2D:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"GFmenu1"
}]
}

[sub_resource type="Animation" id="Animation_1yxsm"]
resource_name = "Menu1Disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Menu1/StartButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Menu1/OptionsButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Menu1/QuitButton:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w3g3d"]
resource_name = "Menu1JustTextAppear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Menu1/StartButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Menu1/OptionsButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Menu1/QuitButton:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"GFmenu1"
}]
}

[sub_resource type="Animation" id="Animation_pb71g"]
resource_name = "Menu2Appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Menu2/SinglePlayerButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Menu2/MultiplayerButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Menu2/BackButton:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"GFmenu2"
}]
}

[sub_resource type="Animation" id="Animation_5kvpy"]
resource_name = "Menu2Disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Menu2/SinglePlayerButton:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Menu2/MultiplayerButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/Menu2/BackButton:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jq0ex"]
_data = {
&"Menu1Appear": SubResource("Animation_crfjn"),
&"Menu1Disappear": SubResource("Animation_1yxsm"),
&"Menu1JustTextAppear": SubResource("Animation_w3g3d"),
&"Menu2Appear": SubResource("Animation_pb71g"),
&"Menu2Disappear": SubResource("Animation_5kvpy")
}

[sub_resource type="Animation" id="Animation_hcawj"]
resource_name = "Splash"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprite2D/SplashText:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.174533, -0.0872665, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0iytt"]
_data = {
&"Splash": SubResource("Animation_hcawj")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uu6fv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="MenuAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jq0ex")
}

[node name="SplashAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0iytt")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -152.0
offset_right = 586.0
grow_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 25

[node name="Menu1" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/Menu1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oldup")
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/Menu1"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("1_oldup")
text = "Options
"

[node name="QuitButton" type="Button" parent="MarginContainer/Menu1"]
layout_mode = 2
focus_previous = NodePath("../OptionsButton")
theme_override_fonts/font = ExtResource("1_oldup")
text = "Quit
"

[node name="Menu2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="SinglePlayerButton" type="Button" parent="MarginContainer/Menu2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oldup")
text = "Single Player"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/Menu2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oldup")
text = "Multiplayer"

[node name="BackButton" type="Button" parent="MarginContainer/Menu2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_oldup")
text = "Back
"

[node name="DiscordMenuManager" parent="." instance=ExtResource("4_aethh")]

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -49.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer2"]
layout_mode = 2
theme = ExtResource("5_s5lhj")
theme_override_font_sizes/font_size = 22
text = "Ver "

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(-669, 141)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_ixqqn")

[node name="SplashText" type="Button" parent="Control/Sprite2D"]
offset_left = 258.75
offset_top = 260.0
offset_right = 687.75
offset_bottom = 371.0
rotation = -0.174533
pivot_offset = Vector2(210.294, 52.887)
focus_mode = 0
theme = ExtResource("5_s5lhj")
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "MissingNo"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Err" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
color = Color(0.317647, 0.160784, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Err"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Err/MarginContainer"]
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Err"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Err/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Err/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_s5lhj")
theme_override_font_sizes/font_size = 30
text = "Disconnected:
Unknown reason"
horizontal_alignment = 1

[node name="ErrOkButtton" type="Button" parent="CenterContainer/Err/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_s5lhj")
theme_override_font_sizes/font_size = 30
text = "OK"

[connection signal="pressed" from="MarginContainer/Menu1/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu1/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu1/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu2/SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu2/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MarginContainer/Menu2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/Sprite2D/SplashText" to="." method="_on_splash_text_pressed"]
[connection signal="pressed" from="CenterContainer/Err/CenterContainer/VBoxContainer/ErrOkButtton" to="." method="_on_err_ok_buttton_pressed"]
